# testsycl

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: common.hpp
test/: CMakeLists.txt  test_basic_sycl.cpp
